--- a/site.html
+++ b/site.html
@@ -4,13 +4,22 @@
 <head>
 	<meta name="color-scheme" content="dark">
 	<meta charset="utf-8">
-	<title>Site</title>
+	<title>My Website</title>
 	<link rel="shortcut icon" href="http.png">
 	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-	<h1>Site</h1>
+	<h1>My Website</h1>
+	<div>
+		Welcome to the Internet!
+		<br>
+		How are your ballz?
+		<br>
+		If you wanna look around...
+		<br>
+		GIVE US YOUR BALLZ!
+	</div>
 </body>
 
 <script src="script.js"></script>
