Comment added and removed

--- a/site.html
+++ b/site.html
@@ -13,12 +13,12 @@
 	<h1>My Website</h1>
 	<div>
 		Welcome to the Internet!
-		<br>
+		<!-- <br>
 		How are your ballz?
 		<br>
 		If you wanna look around...
 		<br>
-		GIVE US YOUR BALLZ!
+		GIVE US YOUR BALLZ! -->
 	</div>
 </body>
 
